workloads/ingress/dev/patch-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: default
  annotations:
    # TODO: ACM Certificate ARN을 ExternalSecret으로 주입
    # SSM Parameter: /sesacthon/dev/ingress/acm-certificate-arn
    # alb.ingress.kubernetes.io/certificate-arn: <SSM에서 가져올 예정>
    external-dns.alpha.kubernetes.io/managed-by: external-dns
spec:
  rules:
    - host: api.dev.growbin.app
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8000
