workloads/ingress/dev/patch-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    # TODO: ACM Certificate ARN을 ExternalSecret으로 주입
    # SSM Parameter: /sesacthon/dev/ingress/acm-certificate-arn
    # alb.ingress.kubernetes.io/certificate-arn: <SSM에서 가져올 예정>
    external-dns.alpha.kubernetes.io/managed-by: external-dns
    # Force ALB Controller to reconcile on every update
    meta.helm.sh/release-namespace: grafana
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=86400
spec:
  rules:
    - host: grafana.dev.growbin.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-grafana
                port:
                  number: 80
